[gd_scene load_steps=6 format=3 uid="uid://b43iytsnn71s2"]

[ext_resource type="FontFile" uid="uid://b1qa2t5gavgfh" path="res://assets/fonts/pico-8-wide-upper.ttf" id="1_o4jsc"]
[ext_resource type="Script" uid="uid://cajitahsd6fkh" path="res://ui/ui.gd" id="1_t31v4"]
[ext_resource type="PackedScene" uid="uid://digpweu7qxuwv" path="res://ui/plant_ui.tscn" id="3_ftwxw"]
[ext_resource type="PackedScene" uid="uid://csrgfjighsjct" path="res://ui/shop_ui.tscn" id="4_tlqsq"]
[ext_resource type="PackedScene" uid="uid://y6j4dpi11hm0" path="res://ui/inventory_ui.tscn" id="5_oc3ud"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_t31v4")

[node name="UIBackground" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextBox" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextBoxBG" type="ColorRect" parent="TextBox"]
layout_mode = 0
offset_left = -28.0
offset_top = -16.0
offset_right = 28.0
offset_bottom = -1.0
color = Color(1, 0.945098, 0.909804, 1)

[node name="TextBoxLabel" type="Label" parent="TextBox/TextBoxBG"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 54.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0.113725, 0.168627, 0.32549, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("1_o4jsc")
theme_override_font_sizes/font_size = 5
text = "talk to the
horse!"

[node name="TextBoxConfirm" type="Label" parent="TextBox/TextBoxBG"]
layout_mode = 0
offset_left = 48.0
offset_top = 9.0
offset_right = 56.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0.760784, 0.764706, 0.780392, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("1_o4jsc")
theme_override_font_sizes/font_size = 5
text = "ÃŽ"

[node name="PlantUI" parent="." instance=ExtResource("3_ftwxw")]
visible = false

[node name="ShopUI" parent="." instance=ExtResource("4_tlqsq")]
visible = false

[node name="InventoryUI" parent="." instance=ExtResource("5_oc3ud")]
visible = false
